--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+# git-ls-files --others --exclude-from=.git/info/exclude
+# Lines that start with '#' are comments.
+# For a project mostly in C, the following would be a good set of
+# exclude patterns (uncomment them if you want to use them):
+
+*.[oa]
+*~
+
+# ignore hidden files
+.*
+# except for .gitignore
+!.gitignore
+!.cproject
+!.project
+!.dep.inc
 bin
-build-config.jam
+dist
+doc/html
+
 fhs.jam
+build-config.jam
+
