UBUNTU: Add ubuntu packaging files.

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,7 +1,7 @@
 [DEFAULT]
 builder = git-pbuilder
 upstream-branch = master
-debian-branch = debian
+debian-branch = ubuntu
 upstream-tag = master/%(version)s
-debian-tag = debian/%(version)s
+debian-tag = ubuntu/%(version)s
 color = auto
