--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ include(ParseVersion)
 include(AddSubmodule)
 
 project(libtenum CXX)
-parse_version(libtenum VERSION 0.9.4)
+parse_version(libtenum VERSION 0.9.5)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 find_package(Boost COMPONENTS unit_test_framework test_exec_monitor REQUIRED)
@@ -18,6 +18,9 @@ include_directories(include)
 # -------------------------------------------------------------------------
 # installation
 install(DIRECTORY include/tenum
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
+install(FILES include/tenum.hpp
   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
 )
 
