BUILD: Add Travis-CI metadata, also detect C++11 compiler flags to work with gcc-4.6.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,20 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 include(GNUInstallDirs)
 include(ParseVersion)
 include(AddSubmodule)
+include(CheckCXXCompilerFlag)
 
 project(libtenum CXX)
 parse_version(libtenum VERSION 0.9.5)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
+check_cxx_compiler_flag("-std=c++11" TENUM_COMPILER_KNOWS_CXX11)
+if(TENUM_COMPILER_KNOWS_CXX11)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+else()
+  check_cxx_compiler_flag("-std=c++0x" TENUM_COMPILER_KNOWS_CXX0X)
+  if(TENUM_COMPILER_KNOWS_CXX0X)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+  endif()
+endif()
 
 find_package(Boost COMPONENTS unit_test_framework test_exec_monitor REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
